Testing out #1713 fix.

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,5 +1,7 @@
 Stan Math Library Release Notes
 
+This is just a test change, please ignore. Branch will be deleted afterwards.
+
 ======================================================================
 v3.1.0 (24 January 2020)
 ======================================================================
